[FIX] web_studio: decrease resizable panel handle width
In Studio, it is not possible to scroll the xml code of a view by
clicking and moving the scroll bar

Steps to reproduce:
1. Install CRM
2. Go to CRM, open a lead and toggle Studio
3. Open the view tab in the sidebar panel and click on xml
4. Try to scroll the template code by clicking on the scroll bar
5. It's not possible, instead you resize the sidebar

Problem:
The resizable_panel_handle was too wide and overlapped the scroll bar

opw-3427984

closes odoo/enterprise#48531

X-original-commit: 46ce84f0e966c1b4230efca73f8c565b3e0a70bd

--- a/web_studio/static/src/client_action/xml_resource_editor/resizable_panel/resizable_panel.scss
+++ b/web_studio/static/src/client_action/xml_resource_editor/resizable_panel/resizable_panel.scss
@@ -6,5 +6,5 @@
 .o_resizable_panel_handle {
     cursor: col-resize;
     z-index: 10;
-    width: 15px;
+    width: 5px;
 }
